Usando Mockito para testar um Domain Service